Finished Awards (ish?), DiceFromPennies, DoubleMindedNumbers, FareySequence, and FunctionsGoneWild2019.